--- a/package.json
+++ b/package.json
@@ -1,26 +1,3 @@
-// {
-//   "name": "chat-app",
-//   "version": "1.0.0",
-//   "description": "",
-//   "main": "index.js",
-//   "scripts": {
-//     "test": "echo \"Error: no test specified\" && exit 1"
-//   },
-//   "keywords": [],
-//   "author": "",
-//   "license": "ISC",
-//   "dependencies": {
-//     "bcryptjs": "^3.0.2",
-//     "connect-sqlite3": "^0.9.15",
-//     "cors": "^2.8.5",
-//     "express": "^5.1.0",
-//     "express-session": "^1.18.1",
-//     "socket.io": "^4.8.1",
-//     "sqlite3": "^5.1.7"
-//   }
-// }
-
-
 {
   "name": "chat-app",
   "version": "1.0.0",
@@ -29,7 +6,10 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "socket.io": "^4.7.2"
+    "express": "^your-version",
+    "socket.io": "^your-version",
+    "express-session": "^your-version",
+    "connect-sqlite3": "^your-version",
+    "sqlite3": "^your-version"
   }
 }
