--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^your-version",
-    "socket.io": "^your-version",
-    "express-session": "^your-version",
-    "connect-sqlite3": "^your-version",
-    "sqlite3": "^your-version"
+    "express": "^5.1.0",
+    "socket.io": "^4.8.1",
+    "express-session": "^1.18.1",
+    "connect-sqlite3": "^0.9.15",
+    "sqlite3": "^5.1.7"
   }
 }
